2005-11-16  Vincent Noel  <vincent.noel@gmail.com>

	* log_repaint.c: (logview_unbold_rows),
	(logview_scroll_and_focus_path), (log_repaint): When switching to
	a log with new lines, scroll down to the new lines and show them in
	bold.
	(log_repaint): Handle things better (fixes screwups when switching logs).
	(log_repaint): Fix another thinko.

2005-11-16  Vincent Noel  <vincent.noel@gmail.com>

	* log_repaint.c: (logview_unbold_rows),
	(logview_add_new_log_lines), (logview_scroll_and_focus_path),
	(log_fill_model_no_date), (log_fill_model_date),
	(logview_create_model), (log_repaint):
	* logview.c: (logview_init): For kicks, bold the new lines for 5
	seconds when a log is updated.

2005-11-16  Vincent Noel  <vincent.noel@gmail.com>

	* log_repaint.c: (logview_update_version_bar),
	(logview_add_new_log_lines), (log_repaint):
	* logrtns.c: (log_open), (log_add_lines), (log_read_new_lines):
	* logrtns.h:
	* logview.c: (logview_select_log): Monitoring was broken, fix it.

2005-11-16  Vincent Noel  <vincent.noel@gmail.com>

	* logview.c (logview_init): Cleanup the main treeview creation.

2005-11-16  Vincent Noel <vincent.noel@gmail.com>

	* loglist.c: (loglist_unbold_log), (loglist_bold_log),
	(loglist_selection_changed), (loglist_init): Bold log names the
	"correct" way, by connecting a GtkTreeViewColumn attributes to the
	"weight" attribute of the GtkCellRenderer.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* logview.c (logview_add_logs_from_names): Expand all rows in the
	side pane log tree at startup.

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* logview.c (logview_init): Now that we have only one column,
	there's no need for the treeview hints (and it's cleaner without).

2005-11-15  Vincent Noel <vincent.noel@gmail.com>

	* loglist.c: (loglist_find_directory), (loglist_add_directory),
	(loglist_add_log):
	* logrtns.c: (log_extract_dirname):
	* logrtns.h:
	* userprefs.c: (prefs_store_active_log), (prefs_save): Some